[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://RockBG.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HOMOARAK.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 4 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="backround" type="Sprite" parent="."]
position = Vector2( 451.524, 268.698 )
scale = Vector2( 4.7627, 4.35873 )
texture = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 139, 87 )

[node name="CoinSpawner" type="Timer" parent="."]

[node name="BombSpawner" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="BombSpawner"]

[node name="GameOver" type="Label" parent="."]
margin_left = 133.0
margin_top = 271.0
margin_right = 809.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 1 )
text = "You've.......Exploeded!!!!!!
"
align = 3
valign = 1
[connection signal="timeout" from="CoinSpawner" to="." method="_on_CoinSpawner_timeout"]
[connection signal="timeout" from="BombSpawner" to="." method="_on_BombSpawner_timeout"]
